crates/perfgate-render/src/snapshots/perfgate_render__tests__snapshot_render_reason_line_fail.snap
---
source: crates/perfgate-render/src/lib.rs
assertion_line: 761
expression: "render_reason_line(&compare, \"wall_ms_fail\")"
---
- wall_ms_fail: +15.00% (fail > 20.00%)
