crates/perfgate-render/src/snapshots/perfgate_render__tests__snapshot_render_reason_line_missing_budget.snap
---
source: crates/perfgate-render/src/lib.rs
assertion_line: 775
expression: "render_reason_line(&compare, \"wall_ms_warn\")"
---
- wall_ms_warn
