crates/perfgate-render/src/snapshots/perfgate_render__tests__snapshot_render_reason_line_pass_fallback.snap
---
source: crates/perfgate-render/src/lib.rs
assertion_line: 768
expression: "render_reason_line(&compare, \"wall_ms_pass\")"
---
- wall_ms_pass
