crates/perfgate-render/src/snapshots/perfgate_render__tests__snapshot_render_reason_line_unknown_token.snap
---
source: crates/perfgate-render/src/lib.rs
assertion_line: 781
expression: "render_reason_line(&compare, \"unknown_metric_warn\")"
---
- unknown_metric_warn
