crates/perfgate-render/src/snapshots/perfgate_render__tests__snapshot_render_reason_line_warn.snap
---
source: crates/perfgate-render/src/lib.rs
assertion_line: 755
expression: "render_reason_line(&compare, \"wall_ms_warn\")"
---
- wall_ms_warn: +15.00% (warn >= 10.00%, fail > 20.00%)
